--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "@repo/tailwind-config": "*",
+    "@repo/ui": "*",
+    "@repo/utility": "*",
     "next": "14.2.6",
+    "next-transpile-modules": "^10.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
