--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,8 +5,20 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"]
+    }
   },
-  "include": ["next-env.d.ts","next.config.mjs", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","postcss.config.js","tailwind.config.ts" ],
+  "include": [
+    "next-env.d.ts",
+    "next.config.mjs",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "postcss.config.js",
+    "tailwind.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
